# droneengage_mavlink

./: .gitignore  .gitmodules  .version  CMAKE_DEB_PACKAGE_GUIDE.md  CMakeLists.txt  MAVFTP  README.md  build.sh  build_ddebug.sh  build_release.sh  config.module.json  config.module1.json  config.module2.json  config_drone.json  config_plane.json  config_rascal.json  de_mavlink.config.module.json  de_mavlink.config.module.org.json  de_mavlink.config.serial.module.json  de_mavlink.config.serialS.module.json  de_mavlink.config1.module.json  de_mavlink.config2.module.json  de_mavlink.config3.module.json  docker.run.sh  doxygen.conf  llms.txt  makefile  notes.txt  plugin.cpp  qgc_mission.plan  qgc_mission2.plan  start1.sh  start2.sh  template.json  test_cross.cpp
.github/workflows/: build.yml
c_library_v2/: mavlink_helpers.h
c_library_v2/ASLUAV/: ASLUAV.h  ASLUAV.hpp  mavlink.h  version.h
c_library_v2/AVSSUAS/: AVSSUAS.h  AVSSUAS.hpp  mavlink.h  mavlink_msg_avss_prs_sys_status.h  testsuite.h  version.h
c_library_v2/all/: all.h  all.hpp  mavlink.h  testsuite.h  version.h
c_library_v2/ardupilotmega/: ardupilotmega.h  ardupilotmega.hpp  mavlink.h  mavlink_msg_ekf_status_report.h  testsuite.h  version.h
c_library_v2/common/: common.h  common.hpp  gtestsuite.hpp  mavlink.h  mavlink_msg_camera_capture_status.h  mavlink_msg_camera_fov_status.h  mavlink_msg_camera_image_captured.h  mavlink_msg_camera_information.h  mavlink_msg_camera_settings.h  mavlink_msg_camera_tracking_geo_status.h  mavlink_msg_camera_tracking_image_status.h  mavlink_msg_command_ack.h  mavlink_msg_follow_target.h  mavlink_msg_gimbal_device_information.h  mavlink_msg_gps2_raw.h  mavlink_msg_high_latency2.h  mavlink_msg_home_position.h  mavlink_msg_manual_control.h  mavlink_msg_mission_ack.h  mavlink_msg_mission_count.h  mavlink_msg_mission_current.h  mavlink_msg_optical_flow.h  mavlink_msg_param_value.h  mavlink_msg_raw_imu.h  mavlink_msg_rc_channels.h  mavlink_msg_rc_channels_raw.h  mavlink_msg_set_attitude_target.h  mavlink_msg_storage_information.h  mavlink_msg_video_stream_information.h  mavlink_msg_video_stream_status.h  mavlink_msg_wifi_config_ap.h  testsuite.h  version.h
c_library_v2/csAirLink/: csAirLink.h  mavlink.h  version.h
c_library_v2/cubepilot/: cubepilot.h  cubepilot.hpp  mavlink.h  version.h
c_library_v2/development/: development.h  development.hpp  gtestsuite.hpp  mavlink.h  mavlink_msg_available_modes.h  mavlink_msg_mission_checksum.h  testsuite.h  version.h
c_library_v2/icarous/: icarous.h  mavlink.h  version.h
c_library_v2/loweheiser/: loweheiser.h  mavlink.h  version.h
c_library_v2/minimal/: mavlink.h  minimal.h  minimal.hpp  version.h
c_library_v2/python_array_test/: mavlink.h  python_array_test.h  python_array_test.hpp  version.h
c_library_v2/standard/: mavlink.h  standard.h  standard.hpp  version.h
c_library_v2/storm32/: mavlink.h  mavlink_msg_storm32_gimbal_device_control.h  mavlink_msg_storm32_gimbal_manager_control.h  storm32.h  storm32.hpp  testsuite.h  version.h
c_library_v2/test/: mavlink.h  test.h  version.h
c_library_v2/uAvionix/: mavlink.h  uAvionix.h  uAvionix.hpp  version.h
c_library_v2/ualberta/: mavlink.h  ualberta.h  ualberta.hpp  version.h
deployment/: de_mavlink.config.module.parent.json  de_mavlink.config.module.slave.json
mavlink_sdk/: .gitignore  CMakeLists.txt  README.md  generic_port.h  makefile  mavlink_command.cpp  mavlink_command.h  mavlink_communicator.cpp  mavlink_communicator.h  mavlink_events.h  mavlink_ftp_manager.cpp  mavlink_ftp_manager.h  mavlink_helper.cpp  mavlink_helper.h  mavlink_parameter_manager.cpp  mavlink_parameter_manager.h  mavlink_sdk.cpp  mavlink_sdk.h  mavlink_waypoint_manager.cpp  mavlink_waypoint_manager.h  serial_port.cpp  serial_port.h  udp_port.cpp  udp_port.h  vehicle.cpp  vehicle.h
mavlink_sdk/WIKI/: VehicleClass.md  Vehicle_ParseMessage.md
mavlink_sdk/helpers/: utils.h
mavlink_sdk/src/: README.md  generic_port.h  global.hpp  makefile  mavlink_command.cpp  mavlink_command.h  mavlink_communicator.cpp  mavlink_communicator.h  mavlink_events.h  mavlink_ftp_manager.cpp  mavlink_ftp_manager.h  mavlink_helper.cpp  mavlink_helper.h  mavlink_parameter_manager.cpp  mavlink_parameter_manager.h  mavlink_sdk.cpp  mavlink_sdk.h  mavlink_waypoint_manager.cpp  mavlink_waypoint_manager.h  serial_port.cpp  serial_port.h  tcp_client_port.cpp  tcp_client_port.h  udp_port.cpp  udp_port.h  vehicle.cpp  vehicle.h
mavlink_sdk/src/helpers/: colors.h  utils.h
mavlink_sdk/src/test/: README.md  makefile  mavlink_tlog.cpp
mavlink_sdk/src/tlog/: mavlink_tlog.cpp  mavlink_tlog.hpp
src/: andruav_facade.cpp  andruav_facade.h  andruav_message_parser.h  andruav_traffic_optimizer.h  autopilot_interface.cpp  autopilot_interface.h  configFile.cpp  configFile.hpp  defines.hpp  fcb_andruav_message_parser.cpp  fcb_andruav_message_parser.hpp  fcb_facade.cpp  fcb_facade.hpp  fcb_flightmode_mapper.cpp  fcb_flightmode_mapper.h  fcb_main.cpp  fcb_main.hpp  fcb_message_parser.cpp  fcb_message_parser.hpp  fcb_modes.cpp  fcb_modes.hpp  fcb_swarm_manager.cpp  fcb_swarm_manager.hpp  fcb_traffic_optimizer.cpp  fcb_traffic_optimizer.hpp  genericClientPort.h  global.hpp  main.cpp  messages.hpp  missions.cpp  missions.hpp  plugin.cpp  plugin.h  px4_modes.h  serial_port.h  uavos_module.cpp  uavos_module.hpp  uavos_plugin.cpp  uavos_plugin.h  udpClient.cpp  (+2 more)
src/de_common/: configFile.cpp  (+13 more)
src/test/: CMakeLists.txt  Makefile  README.md  test_advanced_pid_controller.cpp  test_advanced_pid_controller_standalone  test_advanced_pid_controller_standalone.cpp  test_integral_detailed.cpp  test_integral_increment  test_integral_increment.cpp  test_integral_simple.cpp
tools/: mavlink_distance_sensor.py  mavlink_distance_sensor_fixed.py  mavlink_heartbeat.py
wiki/: CConfigFile_README.md  CFCBMaon::connectToFCB.md  DroneEngage_Message_Routing.md  Explain m_rate_limit Effect.md  JoyStick_Channels_GUIDED.md  Mission_Planning_Mechanism.md  PID and Expo Usage.md  RC_SUB_ACTION.md  Tracking_System_Logic.md  UDPProxyStarlinkFix.md  YAW_CONTROL_REFACTOR_SUMMARY.md
(+71 files in other folders)
